# pytest

./: .gitignore  1.py  CLAUDE.md  main.py  pyproject.toml
qc_script/: 1.py  DELIVERY.txt  HOT_SAY_GUIDE.md  HOT_SAY_SUMMARY.md  HOT_SAY_UPDATE.md  QUICKREF.txt  demo_hot_say.sh  extract_eml.py  generate_behavior_stat_data.py  hot_say_server.py  migrate_activity_to_hot_say.py  migrate_hot_say_to_case_libraries.py  start_hot_say_server.sh  sync_hot_say_from_api.py  sync_hot_say_from_weimob_api.py  sync_hot_say_stats.py  sync_offline_activity_to_hot_say.py  test_hot_say_api.py  wechat_callback_forwarder.py  有问必答店铺创建.py  有问必答店铺试用次数.py  清理2025年之前不续约圈子七牛资源.py  清理过期帖子ES.py  补签.py  邮件内容.txt
script/: 13855703253.json  Pickle错误修复说明.md  WINDOWS_BUILD.md  WINDOWS_BUILD_README.md  build_windows.bat  build_windows.py  build_windows_simple.bat  build_windows_updated.py  phone_classifier.py  phone_classifier.spec  phone_classifier_optimized.py  phone_classifier_windows.spec  proxy.py  优化说明.md  需求.md
script/测试/: 13855790309.json  14064162594.json  14064162594.session  14064192524.json  14064209701.session  14064769053.session  14064769856.session  14066127619.json  14066127619.session  14066167815.json  14066167815.session  14066419984.json  14066419984.session  14066457550.json  14066457550.session  14067082594.session  14067082810.json  14067082810.session  14067299802.json  14067326010.json  (+59 more)
爬虫网/: package-lock.json  题目1.py  题目10.py  题目11.py  题目12.py  题目13.py  题目14.py  题目16.py  题目17.py  题目18.py  题目19.py  题目2.py  题目3.py  题目4.py  题目5.py  题目6.py  题目7.py  题目8.py  题目9.py
爬虫网/js/: 10.js  (+18 more)
(+25 files in other folders)
