[project]
name = "pytest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cfscrape>=2.1.1",
    "cloudscraper>=1.2.71",
    "datarecorder>=3.6.2",
    "drissionpage>=4.1.1.2",
    "flask>=3.1.3",
    "openai>=2.24.0",
    "pymysql>=1.1.1",
    "pysocks>=1.7.1",
    "qiniu>=7.16.0",
    "requests>=2.32.4",
    "urllib3>=2.5.0",
]
